--- a/cryptoShare/src/App.css
+++ b/cryptoShare/src/App.css
@@ -1,3 +1,12 @@
+:root{
+    color: white;
+    --line_color : #555555 ;
+    --back_color : #FFECF6  ;
+    overflow-x: hidden;
+
+}
+
+
 img{
     height: 5rem;
     width: 5rem;
@@ -31,4 +40,32 @@ h1{
 
 h2{
     margin-top: 20%;
+}
+
+.crypto-search-div{
+    justify-content: center;
+    display: grid;
+}
+
+.submit-button{
+    z-index : 0 ;
+    width : 300px ;
+    margin-top: 1rem;
+    height : 56px ;
+    text-decoration : none ;
+    font-size : 14px ;
+    font-weight : bold ;
+    color : var(--line_color) ;
+    letter-spacing : 2px ;
+    transition : all .3s ease ;
+}
+input{
+    height : 50px ;
+    font-size:1.5rem;
+    text-decoration : none ;
+    font-weight : bold;
+    color : var(--line_color) ;
+    letter-spacing : 2px ;
+    transition : all .3s ease ;
+
 }
