--- a/cryptoShare/src/App.css
+++ b/cryptoShare/src/App.css
@@ -1,71 +1,147 @@
-:root{
+:root {
     color: white;
-    --line_color : #555555 ;
-    --back_color : #FFECF6  ;
+    --line_color: #555555;
+    --back_color: #FFECF6;
     overflow-x: hidden;
-
+}
+::selection{
+    user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
-
-img{
+img {
     height: 5rem;
     width: 5rem;
     padding: 5rem;
-
 }
 
-body{
-    background-color:  #101820;
+body {
+    background-color: #101820;
+    display: table;
+    width: 100%;
+    height: 100%;
+    line-height: 1.6;
+    position: relative;
+    font-family: sans-serif;
+    cursor: default;
 }
 
-h1{
-    color: #FBEAEB;
+.lines {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    margin: auto;
+    width: 90vw;
+    z-index: -1;
+}
+
+.line {
+    position: absolute;
+    width: 1px;
+    height: 100%;
+    top: 0;
+    left: 50%;
+    background: rgba(255, 255, 255, 0.1);
+    overflow: hidden;
+}
+
+.line::after {
+    content: "";
+    display: block;
+    position: absolute;
+    height: 15vh;
+    width: 100%;
+    top: -50%;
+    left: 0;
+    background: linear-gradient(
+            to bottom,
+            rgba(255, 255, 255, 0) 0%,
+            #ffffff 75%,
+            #ffffff 100%
+    );
+    animation: drop 7s 0s infinite;
+    animation-fill-mode: forwards;
+    animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
+    z-index: -1 ;
+}
+
+.line:nth-child(1) {
+    margin-left: -25%;
+}
+
+.line:nth-child(3) {
+    margin-left: 25%;
+}
+
+.line:nth-child(1)::after {
+    animation-delay: 2s;
+}
+
+.line:nth-child(3)::after {
+    animation-delay: 2.5s;
+}
+
+@keyframes drop {
+    0% {
+        top: -50%;
+    }
+    100% {
+        top: 110%;
+    }
+}
+
+h1 {
+    color: #fbeaeb;
     margin-top: 2.5rem;
 }
-.home{
+
+.home {
     text-align: center;
     justify-content: center;
     height: 100vh;
-
 }
 
-.href{
+.href {
     text-decoration: none;
-    color: #FEE715;
+    color: #fee715;
 }
+
 .footer {
     text-align: center;
     font-size: 0.85rem;
 }
 
-h2{
-    margin-top: 20%;
+h2 {
+    margin-top: 10%;
 }
 
-.crypto-search-div{
+.crypto-search-div {
     justify-content: center;
     display: grid;
 }
 
-.submit-button{
-    z-index : 0 ;
-    width : 300px ;
+.submit-button {
+    z-index: 0;
+    width: 300px;
     margin-top: 1rem;
-    height : 56px ;
-    text-decoration : none ;
-    font-size : 14px ;
-    font-weight : bold ;
-    color : var(--line_color) ;
-    letter-spacing : 2px ;
-    transition : all .3s ease ;
+    height: 56px;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: bold;
+    color: var(--line_color);
+    letter-spacing: 2px;
+    transition: all 0.3s ease;
 }
-input{
-    height : 50px ;
-    font-size:1.5rem;
-    text-decoration : none ;
-    font-weight : bold;
-    color : var(--line_color) ;
-    letter-spacing : 2px ;
-    transition : all .3s ease ;
 
+input {
+    height: 50px;
+    font-size: 1.5rem;
+    text-decoration: none;
+    font-weight: bold;
+    color: var(--line_color);
+    letter-spacing: 2px;
+    transition: all 0.3s ease;
 }
